--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+body{
+    font-family: 'Oleo Script Swash Caps', cursive;
+}
 h1{
-    color: red;
+    font-size: 50px;
+}
+.highlight{
+    color: orange;
+}
+.half-width{
+    width: 40%;
+    float: left;
+    margin-left: 5%;
+    padding-left: 2%;
+}
+.half-width img{
+    width: 100%;
 }
